--- a/src/app/ma-top-categories/ma-top-categories.component.html
+++ b/src/app/ma-top-categories/ma-top-categories.component.html
@@ -20,8 +20,24 @@
                                 <div class="ma_flex__item cat-item">
                                     <button mat-stroked-button>
                                         <div class="ma_flex--container flex-column">
-                                            <i class="material-icons">note</i>
-                                            <span>Food</span>
+                                            <i class="ma-ico-change"></i>
+                                            <span class="ma-txt__body2 ma-txt__secondary">Food</span>
+                                        </div>
+                                    </button>
+                                </div>
+                                <div class="ma_flex__item cat-item">
+                                    <button mat-stroked-button>
+                                        <div class="ma_flex--container flex-column">
+                                            <i class="ma-ico-dress"></i>
+                                            <span>Fashion</span>
+                                        </div>
+                                    </button>
+                                </div>
+                                <div class="ma_flex__item cat-item">
+                                    <button mat-stroked-button>
+                                        <div class="ma_flex--container flex-column">
+                                            <i class="ma-ico-work"></i>
+                                            <span>Salon</span>
                                         </div>
                                     </button>
                                 </div>
@@ -36,24 +52,8 @@
                                 <div class="ma_flex__item cat-item">
                                     <button mat-stroked-button>
                                         <div class="ma_flex--container flex-column">
-                                            <i class="material-icons">note</i>
-                                            <span>Food</span>
-                                        </div>
-                                    </button>
-                                </div>
-                                <div class="ma_flex__item cat-item">
-                                    <button mat-stroked-button>
-                                        <div class="ma_flex--container flex-column">
-                                            <i class="material-icons">note</i>
-                                            <span>Food</span>
-                                        </div>
-                                    </button>
-                                </div>
-                                <div class="ma_flex__item cat-item">
-                                    <button mat-stroked-button>
-                                        <div class="ma_flex--container flex-column">
-                                            <i class="material-icons">note</i>
-                                            <span>Food</span>
+                                            <i class="ma-ico-home-run"></i>
+                                            <span>Jewellery</span>
                                         </div>
                                     </button>
                                 </div>
