--- a/src/styles/components/_top-categories.scss
+++ b/src/styles/components/_top-categories.scss
@@ -39,6 +39,10 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        i{
+            font-size: 32px;
+            margin-bottom: 10px;
+        }
         button{
             height: 100%;
             width: 100%;
@@ -47,7 +51,7 @@
                   i {
                       
                     &:after {
-                    transition: all 0.6s ease-out;
+                    transition: all 0.8s ease-out;
                       right: 100%;
                     }
                   }
