--- a/src/app/ma-top-categories/ma-top-categories.component.html
+++ b/src/app/ma-top-categories/ma-top-categories.component.html
@@ -20,8 +20,8 @@
                                 <div class="ma_flex__item cat-item">
                                     <button mat-stroked-button>
                                         <div class="ma_flex--container flex-column">
-                                            <i class="ma-ico-change"></i>
-                                            <span class="ma-txt__body2 ma-txt__secondary">Food</span>
+                                            <i class="ma-ico-sandwich"></i>
+                                            <span class="">Food</span>
                                         </div>
                                     </button>
                                 </div>
@@ -36,7 +36,7 @@
                                 <div class="ma_flex__item cat-item">
                                     <button mat-stroked-button>
                                         <div class="ma_flex--container flex-column">
-                                            <i class="ma-ico-work"></i>
+                                            <i class="ma-ico-signage"></i>
                                             <span>Salon</span>
                                         </div>
                                     </button>
@@ -44,15 +44,7 @@
                                 <div class="ma_flex__item cat-item">
                                     <button mat-stroked-button>
                                         <div class="ma_flex--container flex-column">
-                                            <i class="material-icons">note</i>
-                                            <span>Food</span>
-                                        </div>
-                                    </button>
-                                </div>
-                                <div class="ma_flex__item cat-item">
-                                    <button mat-stroked-button>
-                                        <div class="ma_flex--container flex-column">
-                                            <i class="ma-ico-home-run"></i>
+                                            <i class="ma-ico-signage"></i>
                                             <span>Jewellery</span>
                                         </div>
                                     </button>
@@ -60,56 +52,64 @@
                                 <div class="ma_flex__item cat-item">
                                     <button mat-stroked-button>
                                         <div class="ma_flex--container flex-column">
-                                            <i class="material-icons">note</i>
-                                            <span>Food</span>
+                                            <i class="ma-ico-brain"></i>
+                                            <span>Electronics</span>
                                         </div>
                                     </button>
                                 </div>
                                 <div class="ma_flex__item cat-item">
                                     <button mat-stroked-button>
                                         <div class="ma_flex--container flex-column">
-                                            <i class="material-icons">note</i>
-                                            <span>Food</span>
+                                            <i class="ma-ico-signage"></i>
+                                            <span>Book Store</span>
                                         </div>
                                     </button>
                                 </div>
                                 <div class="ma_flex__item cat-item">
                                     <button mat-stroked-button>
                                         <div class="ma_flex--container flex-column">
-                                            <i class="material-icons">note</i>
-                                            <span>Food</span>
+                                            <i class="ma-ico-signage"></i>
+                                            <span>Convenience Store</span>
                                         </div>
                                     </button>
                                 </div>
                                 <div class="ma_flex__item cat-item">
                                     <button mat-stroked-button>
                                         <div class="ma_flex--container flex-column">
-                                            <i class="material-icons">note</i>
-                                            <span>Food</span>
+                                            <i class="ma-ico-florist"></i>
+                                            <span>Florist</span>
                                         </div>
                                     </button>
                                 </div>
                                 <div class="ma_flex__item cat-item">
                                     <button mat-stroked-button>
                                         <div class="ma_flex--container flex-column">
-                                            <i class="material-icons">note</i>
-                                            <span>Food</span>
+                                            <i class="ma-ico-optician"></i>
+                                            <span>Optician</span>
                                         </div>
                                     </button>
                                 </div>
                                 <div class="ma_flex__item cat-item">
                                     <button mat-stroked-button>
                                         <div class="ma_flex--container flex-column">
-                                            <i class="material-icons">note</i>
-                                            <span>Food</span>
+                                            <i class="ma-ico-gift"></i>
+                                            <span>Stationary & Gift shop</span>
                                         </div>
                                     </button>
                                 </div>
                                 <div class="ma_flex__item cat-item">
                                     <button mat-stroked-button>
                                         <div class="ma_flex--container flex-column">
-                                            <i class="material-icons">note</i>
-                                            <span>Food</span>
+                                            <i class="ma-ico-heart"></i>
+                                            <span>Charity</span>
+                                        </div>
+                                    </button>
+                                </div>
+                                <div class="ma_flex__item cat-item">
+                                    <button mat-stroked-button>
+                                        <div class="ma_flex--container flex-column">
+                                            <i class="ma-ico-plan"></i>
+                                            <span>Hobbies & Gaming</span>
                                         </div>
                                     </button>
                                 </div>
