--- a/src/app/ma-footer/ma-footer.component.html
+++ b/src/app/ma-footer/ma-footer.component.html
@@ -66,10 +66,18 @@
                 <div class="ma_flex--container flex-column">
                     <div class="ma_flex__item--inherit">
                         <div class="social-media-links">
-                            <div class="link-circle ma-mr-10">f</div>
-                            <div class="link-circle ma-mr-10">f</div>
-                            <div class="link-circle ma-mr-10">f</div>
-                            <div class="link-circle ma-mr-10">f</div>
+                            <div class="link-circle ma-mr-10">
+                                <i class="ma-ico-facebook"></i>
+                            </div>
+                            <div class="link-circle ma-mr-10">
+                                <i class="ma-ico-instagram"></i>
+                            </div>
+                            <div class="link-circle ma-mr-10">
+                                <i class="ma-ico-twitter"></i>
+                            </div>
+                            <div class="link-circle ma-mr-10">
+                                <i class="ma-ico-youtube"></i>
+                            </div>
                         </div> 
                     </div>
                     <div class="ma_flex__item--inherit">
@@ -83,11 +91,11 @@
 <div class="container">
     <div class="footer-payment">
         <div class="ma_flex--container ma-w-100">
-            <div class="ma_flex__item ma_flex__item--vcenter p50">
+            <div class="ma_flex__item ma_flex__item--vcenter">
                 <img src="../../assets/images/payment.png">
             </div>
-            <div class="ma_flex__item ma_flex__item--vcenter p50">
-                <div class="ma_flex--container">
+            <div class="ma_flex__item ma_flex__item--vcenter">
+                <div class="ma_flex--container footer-quick-link-wrapper">
                     <div class="ma_flex__item ma_flex__item--vcenter">
                         <span class="ma-txt__body2 ma-txt__secondary quick-link __link">Online Shopping</span>
                         <span class="ma-txt__body2 ma-txt__secondary quick-link __link">Promotions</span>
