--- a/src/styles/components/_app-download.scss
+++ b/src/styles/components/_app-download.scss
@@ -6,10 +6,25 @@
     align-items: center;
     position: relative;
     overflow: hidden;
+    >.ma_flex--container{
+        flex-wrap: wrap;
+    }
     .col-1{
-        border-right: 1px dotted #fff;
-        margin-right: 30px;
         min-width: 200px;
+        @include respond-to("x-small") {
+            flex: 0 0 100%;
+            max-width: unset;
+            margin-right: 0;
+            margin-bottom: 20px;
+            border-right: 0px dotted #fff;
+        }
+        @include respond-to("medium") {
+            flex: 0 0 8.333333%;
+            max-width: 8.333333%;
+            margin-right: 30px;
+            margin-bottom: 0px;
+            border-right: 1px dotted #fff;
+        }
     }
     .section-header--small{
         color: #fff;
@@ -31,6 +46,12 @@
         bottom: -88px;
         img{
             width: 250px;
+        }
+        @include respond-to("x-small") {
+            display: none;
+        }
+        @include respond-to("medium") {
+            display: block;
         }
     }
 }
